@@ -1,3 +1,8 @@
+2018-05-27  Tom Tromey  <tom@tromey.com>
+
+	* complaints.h (struct complaints): Remove declaration.
+	* complaints.c (clear_complaints): Remove an unused variable.
+
 2018-06-14  Tom de Vries  <tdevries@suse.de>
 
 	PR cli/22573
